--- a/main.scss
+++ b/main.scss
@@ -13,6 +13,7 @@
   --color-1: #fceb36;
   --color-2: #1f1f1f;
   --color-3: #4bd25b;
+  --color-3-hint-1: #5cd66a;
   --color-4: #fff7d6;
   --color-5: #cc3e58;
   --font-principal: "Rajdhani", sans-serif;
@@ -28,57 +29,75 @@
       margin: 0 auto;
       padding: 2rem;
       text-align: center;
-      h1 {
-        font-size: 3rem;
-        letter-spacing: 0.2rem;
-        line-height: 1.1;
-        font-weight: 400;
-        color: var(--color-5);
-        @media screen and (max-width: 500px) {
-          max-width: 80vw;
-          margin: auto;
-        }
-        .w-600 {
-          font-weight: 600;
-        }
-        .col-2 {
-          color: var(--color-2);
-        }
-      }
-      p {
-        color: var(--color-2);
-        font-family: 400;
-        font-size: 1.2rem;
-        @media screen and (max-width: 500px) {
-          max-width: 80vw;
-          padding: 2%;
-        }
-      }
-
-      .logo {
-        height: 20em;
-        padding: 1.5em;
-        @media screen and (max-width: 500px) {
-          padding: 1%;
-          max-height: 15em;
-        }
-      }
-      .button-box {
-        text-align: center;
+      section {
         display: grid;
-        flex-direction: column;
-        justify-items: center;
-        gap: 1vh;
-        .button {
-          width: 35vw;
-          color: var(--color-2);
-          background-color: var(--color-3);
-          padding: 0.6rem 1rem;
-          border-radius: 5px;
-          letter-spacing: 0.1em;
-          text-decoration: inherit;
-          &:hover {
-            opacity: 0.8;
+        grid:
+          "." auto
+          "." auto
+          / 1fr;
+        @media screen and (min-width: 767px) {
+          grid:
+            ". ."
+            /1fr 1fr;
+        }
+        figure {
+          h1 {
+            font-size: 3rem;
+            letter-spacing: 0.2rem;
+            line-height: 1.1;
+            font-weight: 400;
+            color: var(--color-5);
+            @media screen and (max-width: 500px) {
+              max-width: 80vw;
+              margin: auto;
+            }
+            .w-600 {
+              font-weight: 600;
+            }
+            .col-2 {
+              color: var(--color-2);
+            }
+          }
+          .logo {
+            height: 20em;
+            padding: 1.5em;
+            @media screen and (max-width: 500px) {
+              padding: 1%;
+              max-height: 15em;
+            }
+          }
+        }
+        article {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          p {
+            font-size: 1.3rem;
+            padding-bottom: 7vh;
+            color: var(--color-5);
+          }
+          .button-box {
+            justify-content: center;
+            display: grid;
+            grid: ". . ." 1fr;
+            justify-content: space-around;
+            width: 100%;
+
+            .button {
+              background-color: #1f1f1f;
+              color: var(--color-2);
+              background-color: var(--color-3);
+              color: var(--color-4);
+              font-size: 1.5rem;
+              padding: 1.5rem 1rem;
+              border-radius: 100px;
+              text-decoration: inherit;
+              &:hover {
+                opacity: 0.8;
+                transform: scale(1.5);
+                transition: 0.5s;
+              }
+            }
           }
         }
       }
