--- a/main.scss
+++ b/main.scss
@@ -29,6 +29,7 @@
       margin: 0 auto;
       padding: 2rem;
       text-align: center;
+      overflow: hidden;
       section {
         display: grid;
         grid:
@@ -77,11 +78,12 @@
             color: var(--color-5);
           }
           .button-box {
+            margin: auto;
             justify-content: center;
             display: grid;
             grid: ". . ." 1fr;
             justify-content: space-around;
-            width: 100%;
+            width: 90%;
 
             .button {
               background-color: #1f1f1f;
